Fix overflowing headers

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -316,6 +316,7 @@
 .markdown-body h5,
 .markdown-body h6 {
   &:first-child {
+    display: inline-block;
     margin-top: 0;
   }
 }
